--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@ Thumbs.db*
 HELP.md
 .gradle
 build/
-.gradlew
-.gradlew.bat
-.settings.gradle
+gradlew
+gradlew.bat
+settings.gradle
 
 ### STS ###
 .apt_generated
