--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/db
-spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.username=postgresuser
+spring.datasource.password=qazxsw123
